Update to the JSON

--- a/Futoshiki/src/bin/settings.json
+++ b/Futoshiki/src/bin/settings.json
@@ -1,7 +1,1 @@
-{
-  "difficulty": "Easy",
-  "button": "Right",
-  "size": 3,
-  "multilevel": false,
-  "clock": "Stopwatch"
-}
+{"difficulty":"Easy","button":"Right","size":3,"multilevel":false,"clock":"Stopwatch"}
