Minor fixes and comments added to missing classes

--- a/Futoshiki/src/bin/settings.json
+++ b/Futoshiki/src/bin/settings.json
@@ -1,1 +1,1 @@
-{"difficulty":"Easy","button":"Right","size":10,"multilevel":true,"clock":"No"}
+{"difficulty":"Easy","button":"Right","size":3,"multilevel":true,"clock":"Stopwatch"}
